robotic-codes/src/test/test_cstrr.txt
test_cstrr.cpp: In function ‘int main()’:
test_cstrr.cpp:10:3: error: expected ‘;’ before ‘float’
   float num;
   ^~~~~
test_cstrr.cpp:11:3: error: ‘num’ was not declared in this scope
   num =10;
   ^~~
test_cstrr.cpp:11:3: note: suggested alternative: ‘enum’
   num =10;
   ^~~
   enum
test_cstrr.cpp:12:7: error: ‘cstrr’ was not declared in this scope
   s = cstrr(num);
       ^~~~~
test_cstrr.cpp:12:7: note: suggested alternative: ‘stderr’
   s = cstrr(num);
       ^~~~~
       stderr
